# my_beginner_tutorials

./: LICENSE  Readme.md  frames_2024-11-14_20.38.32.gv
.cache/clangd/index/: publisher_node.cpp.23CE72780BA4EEE2.idx  subscriber_node.cpp.E9F472D87A85C1F0.idx  test_talker.cpp.0AFC6E094D328DF3.idx
beginner_tutorials/: CMakeLists.txt  cpplint_output.txt  package.xml
beginner_tutorials/launch/: publisher_subscriber_launch.py
beginner_tutorials/src/: publisher_node.cpp  subscriber_node.cpp  test_talker.cpp
beginner_tutorials/srv/: TogglePublishingService.srv
beginner_tutorials/tests/: test_talker.cpp
results/: metadata.yaml  rosbag_output_0.db3
screenshots/: cpplint_output.txt
